RESOLVED FIXED36049
PrintContext.end() not called from PrintContext::pageNumberForElement()
https://bugs.webkit.org/show_bug.cgi?id=36049
Summary PrintContext.end() not called from PrintContext::pageNumberForElement()
Yuzo Fujishima
Reported 2010-03-11 22:51:06 PST
This will leave the frame in printing mode, which is not desirable. Please see the patch for details.
Attachments
Always call PrintContext.end() from PrintContext::pageNumberForElement(). (1.46 KB, patch)
2010-03-11 22:54 PST, Yuzo Fujishima
no flags
Always call PrintContext.end() from PrintContext::pageNumberForElement(). (12.46 KB, patch)
2010-03-14 23:32 PDT, Yuzo Fujishima
hamaji: review+
Yuzo Fujishima
Comment 1 2010-03-11 22:54:06 PST
Created attachment 50578 [details] Always call PrintContext.end() from PrintContext::pageNumberForElement().
Shinichiro Hamaji
Comment 2 2010-03-11 23:51:35 PST
Comment on attachment 50578 [details] Always call PrintContext.end() from PrintContext::pageNumberForElement(). Thanks for the nice catch! > + Always call PrintContext.end() from PrintContext::pageNumberForElement(). > + https://bugs.webkit.org/show_bug.cgi?id=36049 > + We usually write why we don't need new tests.
Yuzo Fujishima
Comment 3 2010-03-12 01:22:13 PST
Thank you for the review. I'll commit the change after fixing the Changelog.
Yuzo Fujishima
Comment 4 2010-03-14 23:32:14 PDT
Created attachment 50685 [details] Always call PrintContext.end() from PrintContext::pageNumberForElement().
Yuzo Fujishima
Comment 5 2010-03-14 23:34:34 PDT
I've added a test instead of changing the log. Can you take another look?
Shinichiro Hamaji
Comment 6 2010-03-15 00:05:50 PDT
Comment on attachment 50685 [details] Always call PrintContext.end() from PrintContext::pageNumberForElement(). Looks good. It's unfortunate we cannot test this without images though.
Yuzo Fujishima
Comment 7 2010-03-15 01:33:32 PDT
Note You need to log in before you can comment on or make changes to this bug.