2010-03-14  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Shinichiro Hamaji.

        Always call PrintContext.end() from PrintContext::pageNumberForElement().

        Without this change, WebKit remains in printing mode after determining the page number if the specified element is found.

        https://bugs.webkit.org/show_bug.cgi?id=36049

        * platform/gtk/Skipped:
        * platform/mac/printing/return-from-printing-mode-expected.checksum: Added.
        * platform/mac/printing/return-from-printing-mode-expected.png: Added.
        * platform/mac/printing/return-from-printing-mode-expected.txt: Added.
        * platform/qt/Skipped:
        * platform/win/Skipped:
        * printing/return-from-printing-mode.html: Added.
2010-03-14  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Always call PrintContext.end() from PrintContext::pageNumberForElement().

        Without this change, WebKit remains in printing mode after determining the page number if the specified element is found.

        https://bugs.webkit.org/show_bug.cgi?id=36049

        Test: printing/return-from-printing-mode.html

        * page/PrintContext.cpp:
        (WebCore::PrintContext::pageNumberForElement):

Canonical link: https://commits.webkit.org/47283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55988 268f45cc-cd09-0410-ab3c-d52691b4dbfc